--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,20 @@
 <html>
-	<a href="index.html"> HOME</a>
-	&nbsp; 
-	<a href="aboutme.html"> Aboutme!</a>
-	&nbsp;
-	<a href="contact.html"> Contact</a>
-	<hr></hr>
+
+	<head>
+		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+	</head>
+
+	<body>
+		<a href="index.html"> HOME</a>
+		&nbsp; 
+		<a href="aboutme.html"> Aboutme!</a>
+		&nbsp;
+		<a href="contact.html"> Contact</a>
+		<hr></hr>
+		
+		<h1> This is the about me page</h1>
+	</body>
 	
-	<h1> This is the about me page</h1>
 </html>
 
 
