--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <html>
-	<title>title</title>
+	
 	<head>
+		<title>title</title>
+
+		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+
 	</head>
 
 	<body>	
-		<a href="index.html"> HOME</a>
+		<a href="index.html" class = 'special_color' ><span class = 'special_size'>HOME</span></a>
 		&nbsp; 
 		<a href="aboutme.html"> Aboutme!</a>
 		&nbsp;
 		<a href="contact.html"> Contact</a>
-		<hr></hr>
+
+		<hr class = "gap_above"></hr>
 
 		<h1> This is the main page</h1>
 
-		<p> This is not me</p>
+		<p class = "special_size"> This is not me</p>
 		<a href="myk.png"> 
 			<img src="myk.png" width="20%" height="20%" />
 		</a>
