--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,27 @@
 <html>
 
-	<a href="index.html"> HOME</a>
-	&nbsp; 
-	<a href="aboutme.html"> Aboutme!</a>
-	&nbsp;
-	<a href="contact.html"> Contact</a>
-	<hr></hr>
+	<head>
+		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+	</head>
 
-	<h1> This is the contact page</h1>
+	<bod>
 
-	<ul>
-		<li> first contact</li>
-		<li> second contact</li>
-		<li> third contact</li>
-		<li> forth contact</li>
-	</ul>
+		<a href="index.html"> HOME</a>
+		&nbsp; 
+		<a href="aboutme.html"> Aboutme!</a>
+		&nbsp;
+		<a href="contact.html"> Contact</a>
+		<hr></hr>
+	
+		<h1> This is the contact page</h1>
+	
+		<ul>
+			<li> first contact</li>
+			<li> second contact</li>
+			<li> third contact</li>
+			<li> forth contact</li>
+		</ul>
+	</bod>
 </html>
 
 
