--- a/aboutme.html
+++ b/aboutme.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
 	</head>
 
 	<body>
@@ -14,7 +14,7 @@
 		
 		<h1> This is the about me page</h1>
 	</body>
-	
+
 </html>
 
 
