--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
 	</head>
 
 	<bod>
