--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>title</title>
 
-		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
 
 	</head>
 
