--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 	
 	<head>
 		<title>title</title>
-
+		
+		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
 		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
 
 	</head>
@@ -16,11 +17,25 @@
 
 		<hr class = "gap_above"></hr>
 
-		<h1> This is the main page</h1>
+		<div class = "container">
+			<h1> This is the main page</h1>
+		</div>
 
-		<p class = "special_size"> This is not me</p>
-		<a href="myk.png"> 
-			<img src="myk.png" width="20%" height="20%" />
-		</a>
+		<div class = "row">
+			<div class = "col-md-6 thin_border">
+				<p class = "special_size"> This is not me</p>
+			</div>
+
+			<div class = "col-md-6 thin_border">
+				<p> hello from the other column</p>
+			</div>
+		</div>
+		
+		<a class='color1 color2'>what color</a>
+		
+
+
+
+
 	</body>
 </html>
