--- a/aboutme.html
+++ b/aboutme.html
@@ -2,6 +2,8 @@
 
 	<head>
 		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
+		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
+		<script src= "https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	</head>
 
 	<body>
@@ -12,11 +14,49 @@
 		<a href="contact.html"> Contact</a>
 		<hr></hr>
 		
+		<div class = "row">
+			<div class = "col-md-2" >
+				<img class = "small_image" src = "images/image1.jpg" >
+			</div>
+			<div class = "col-md-2" >
+				<img class = "small_image" src = "images/image2.jpg" >
+			</div>
+			<div class = "col-md-2 " >
+				<img class = "small_image" src = "images/image3.jpg" >
+			</div>
+			<div class = "col-md-2" >
+				<img class = "small_image" src = "images/image4.jpg" >
+			</div>
+			<div class = "col-md-2" >
+				<img class = "small_image" src = "images/image5.jpg" >
+			</div>
+			<div class = "col-md-2" >
+				<img class = "small_image" src = "images/image6.jpg" >
+			</div>
+		</div>
+
+		<div class = "row">
+			<div class = "col-md-12">
+				<img class = "big_image " src = "images/image1.jpg">
+			</div>
+		</div>
+
 		<h1> This is the about me page</h1>
 	</body>
 
 </html>
 
+
+
+<script type = "text/javascript">
+
+	$(".small_image").click( function (){
+		
+		$(".big_image").attr('src', $(this).attr("src"));
+	});
+	
+
+</script>
 
 
 
