--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		
 		<link rel = "stylesheet" type = "text/css"  href = "styles/style1.css"  />
 		<link rel = "stylesheet" type = "text/css"  href = "styles/bootstrap.css"  />
+		<!-- import jQuery -->
+		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
 	</head>
 
@@ -15,6 +17,7 @@
 		&nbsp;
 		<a href="contact.html"> Contact</a>
 
+		<h1 id = "number" onclick = "count();"> hi </h1>
 		<hr class = "gap_above"></hr>
 
 		<div class = "container">
@@ -35,6 +38,17 @@
 		
 
 
+		
+		<script type = "text/javascript">
+
+			var num = 0;
+			
+			function count(){
+				num += 1;
+				$("#number").html(num);
+			}
+			
+		</script>
 
 
 	</body>
